src/components/Button/style.css
.Button {
  -webkit-appearance: none;
  background: transparent none;
  border: var(--rvr-border-width-md) solid transparent;
  box-sizing: border-box;
  cursor: pointer;
  font-size: var(--rvr-font-size-md);
  line-height: var(--rvr-line-height-sm);
  transition: 0.2s linear background-color, 0.2s linear border-color, 0.2s linear color;
  display: inline-flex;
  flex-flow: row nowrap;
  align-content: center;
  text-decoration: none;
}

.Button.disabled,
.Button:disabled,
.Button[disabled] {
  cursor: default;
}

.buttonBody {
  flex: 1 1 auto;
  min-width: 0;
}

/* Sizes */

.sm {
  padding: var(--rvr-space-bordered-xs) var(--rvr-space-bordered-sm);
  border-radius: calc(var(--rvr-space-bordered-sm) + (var(--rvr-line-height-md) / 2));
}

.md {
  padding: var(--rvr-space-bordered-sm) var(--rvr-space-bordered-md);
  border-radius: calc(var(--rvr-space-bordered-md) + (var(--rvr-line-height-md) / 2));
}

.lg {
  padding: var(--rvr-space-bordered-md) var(--rvr-space-bordered-lg);
  border-radius: calc(var(--rvr-space-bordered-lg) + (var(--rvr-line-height-md) / 2));
}

/* Circle */
.circle {
  display: inline-block;
  text-align: center;
}

.sm.circle {
  height: calc(var(--rvr-space-bordered-xs) * 2 + var(--rvr-line-height-md));
  width: calc(var(--rvr-space-bordered-xs) * 2 + var(--rvr-line-height-md));
  padding: var(--rvr-space-bordered-xs);
  border-radius: calc(var(--rvr-space-bordered-sm) + (var(--rvr-line-height-md) / 2));
}

.md.circle {
  height: calc(var(--rvr-space-bordered-sm) * 2 + var(--rvr-line-height-md));
  width: calc(var(--rvr-space-bordered-sm) * 2 + var(--rvr-line-height-md));
  padding: var(--rvr-space-bordered-sm);
  border-radius: calc(var(--rvr-space-bordered-md) + (var(--rvr-line-height-md) / 2));
}

.lg.circle {
  height: calc(var(--rvr-space-bordered-md) * 2 + var(--rvr-line-height-md));
  width: calc(var(--rvr-space-bordered-md) * 2 + var(--rvr-line-height-md));
  padding: var(--rvr-space-bordered-md);
  border-radius: calc(var(--rvr-space-bordered-md) + (var(--rvr-line-height-md) / 2));
}

/* Button level colors */

.primary,
.primary:link,
.primary:visited {
  color: var(--rvr-btn-color-primary);
  background-color: var(--rvr-btn-bg-color-primary);
  border-color: var(--rvr-btn-border-color-primary);
}

.primary.active,
.primary:active,
.primary.hover,
.primary:hover,
.primary.focus,
.primary:focus {
  color: var(--rvr-btn-color-primary-active);
  background-color: var(--rvr-btn-bg-color-primary-active);
  border-color: var(--rvr-btn-border-color-primary-active);
}

.primary.disabled,
.primary:disabled,
.primary[disabled] {
  color: var(--rvr-btn-color-primary-disabled);
  background-color: var(--rvr-btn-bg-color-primary-disabled);
  border-color: var(--rvr-btn-border-color-primary-disabled);
}

.primary-alt,
.primary-alt:link,
.primary-alt:visited {
  color: var(--rvr-btn-color-primary-alt);
  background-color: var(--rvr-btn-bg-color-primary-alt);
  border-color: var(--rvr-btn-border-color-primary-alt);
}

.primary-alt.active,
.primary-alt:active,
.primary-alt.hover,
.primary-alt:hover,
.primary-alt.focus,
.primary-alt:focus {
  color: var(--rvr-btn-color-primary-alt-active);
  background-color: var(--rvr-btn-bg-color-primary-alt-active);
  border-color: var(--rvr-btn-border-color-primary-alt-active);
}

.primary-alt.disabled,
.primary-alt:disabled,
.primary-alt[disabled] {
  color: var(--rvr-btn-color-primary-alt-disabled);
  background-color: var(--rvr-btn-bg-color-primary-alt-disabled);
  border-color: var(--rvr-btn-border-color-primary-alt-disabled);
}

.secondary,
.secondary:link,
.secondary:visited {
  color: var(--rvr-btn-color-secondary);
  background-color: var(--rvr-btn-bg-color-secondary);
  border-color: var(--rvr-btn-border-color-secondary);
}

.secondary.active,
.secondary:active,
.secondary.hover,
.secondary:hover,
.secondary.focus,
.secondary:focus {
  color: var(--rvr-btn-color-secondary-active);
  background-color: var(--rvr-btn-bg-color-secondary-active);
  border-color: var(--rvr-btn-border-color-secondary-active);
}

.secondary.disabled,
.secondary:disabled,
.secondary[disabled] {
  color: var(--rvr-btn-color-secondary-disabled);
  background-color: var(--rvr-btn-bg-color-secondary-disabled);
  border-color: var(--rvr-btn-border-color-secondary-disabled);
}

.tertiary,
.tertiary:link,
.tertiary:visited {
  color: var(--rvr-btn-color-tertiary);
  background-color: var(--rvr-btn-bg-color-tertiary);
  border-color: var(--rvr-btn-border-color-tertiary);
}

.tertiary.active,
.tertiary:active,
.tertiary.hover,
.tertiary:hover,
.tertiary.focus,
.tertiary:focus {
  color: var(--rvr-btn-color-tertiary-active);
  background-color: var(--rvr-btn-bg-color-tertiary-active);
  border-color: var(--rvr-btn-border-color-tertiary-active);
}

.tertiary.disabled,
.tertiary:disabled,
.tertiary[disabled] {
  color: var(--rvr-btn-color-tertiary-disabled);
  background-color: var(--rvr-btn-bg-color-tertiary-disabled);
  border-color: var(--rvr-btn-border-color-tertiary-disabled);
}

.success,
.success:link,
.success:visited {
  color: var(--rvr-btn-color-success);
  background-color: var(--rvr-btn-bg-color-success);
  border-color: var(--rvr-btn-border-color-success);
}

.success.active,
.success:active,
.success.hover,
.success:hover,
.success.focus,
.success:focus {
  color: var(--rvr-btn-color-success-active);
  background-color: var(--rvr-btn-bg-color-success-active);
  border-color: var(--rvr-btn-border-color-success-active);
}

.success.disabled,
.success:disabled,
.success[disabled] {
  color: var(--rvr-btn-color-primary-alt-disabled);
  background-color: var(--rvr-btn-bg-color-primary-alt-disabled);
  border-color: var(--rvr-btn-border-color-primary-alt-disabled);
}

.danger,
.danger:link,
.danger:visited {
  color: var(--rvr-btn-color-danger);
  background-color: var(--rvr-btn-bg-color-danger);
  border-color: var(--rvr-btn-border-color-danger);
}

.danger.active,
.danger:active,
.danger.hover,
.danger:hover,
.danger.focus,
.danger:focus {
  color: var(--rvr-btn-color-danger-active);
  background-color: var(--rvr-btn-bg-color-danger-active);
  border-color: var(--rvr-btn-border-color-danger-active);
}

.danger.disabled,
.danger:disabled,
.danger[disabled] {
  color: var(--rvr-btn-color-primary-alt-disabled);
  background-color: var(--rvr-btn-bg-color-primary-alt-disabled);
  border-color: var(--rvr-btn-border-color-primary-alt-disabled);
}

.link,
.link:link,
.link:visited {
  color: var(--rvr-btn-color-link);
  background-color: var(--rvr-btn-bg-color-link);
  border-color: var(--rvr-btn-border-color-link);
}

.link.active,
.link:active,
.link.hover,
.link:hover,
.link.focus,
.link:focus {
  color: var(--rvr-btn-color-link-active);
  background-color: var(--rvr-btn-bg-color-link-active);
  border-color: var(--rvr-btn-border-color-link-active);
}

.link.disabled,
.link:disabled,
.link[disabled] {
  color: var(--rvr-btn-color-link-disabled);
  background-color: var(--rvr-btn-bg-color-link-disabled);
  border-color: var(--rvr-btn-border-color-link-disabled);
}

.text,
.text:link,
.text:visited {
  color: var(--rvr-btn-color-text);
  background-color: var(--rvr-btn-bg-color-text);
  border-color: var(--rvr-btn-border-color-text);
}

.text.active,
.text:active,
.text.hover,
.text:hover,
.text.focus,
.text:focus {
  color: var(--rvr-btn-color-text-active);
  background-color: var(--rvr-btn-bg-color-text-active);
  border-color: var(--rvr-btn-border-color-text-active);
}

.text.disabled,
.text:disabled,
.text[disabled] {
  color: var(--rvr-btn-color-text-disabled);
  background-color: var(--rvr-btn-bg-color-text-disabled);
  border-color: var(--rvr-btn-border-color-text-disabled);
}

.hollow,
.hollow:link,
.hollow:visited {
  color: var(--rvr-btn-color-hollow);
  background-color: var(--rvr-btn-bg-color-hollow);
  border-color: var(--rvr-btn-border-color-hollow);
}

.hollow.active,
.hollow:active,
.hollow.hover,
.hollow:hover,
.hollow.focus,
.hollow:focus {
  color: var(--rvr-btn-color-hollow-active);
  background-color: var(--rvr-btn-bg-color-hollow-active);
  border-color: var(--rvr-btn-border-color-hollow-active);
}

.hollow.disabled,
.hollow:disabled,
.hollow[disabled] {
  color: var(--rvr-btn-color-hollow-disabled);
  background-color: var(--rvr-btn-bg-color-hollow-disabled);
  border-color: var(--rvr-btn-border-color-hollow-disabled);
}

